# ServerOrganizer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: ArgsParser.cpp  ArgsParser.h  Common.cpp  Common.h  ServerOrganizer.cpp  ServerOrganizer.h  main.cpp  server.cpp
